# rostron_aggregate_py

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
rostron_aggregate_py/: minimal_aggregate.py
rostron_aggregate_py/utils/: StatePublisher.py
rostron_filters_py/: minimal_filter.py  simple_filter.py
rostron_filters_py/utils/: Ball.py  Robot.py  StatePublisher.py
